--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>job-search-ui</artifactId>
         <groupId>com.tomkasp</groupId>
@@ -9,7 +10,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>backend</name>
     <artifactId>backend</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -29,6 +32,21 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>com.heroku.sdk</groupId>-->
+            <!--                <artifactId>heroku-maven-plugin</artifactId>-->
+            <!--                <version>2.0.13</version>-->
+            <!--                <configuration>-->
+            <!--                    <appName>job-search-frontend</appName>-->
+            <!--                    <includeTarget>false</includeTarget>-->
+            <!--                    <includes>-->
+            <!--                        <include>${project.build.directory}/${project.build.finalName}.jar</include>-->
+            <!--                    </includes>-->
+            <!--                    <processTypes>-->
+            <!--                        <web>java $JAVA_OPTS -jar target/${project.build.finalName}.jar</web>-->
+            <!--                    </processTypes>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
