--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,26 @@
         <module>frontend</module>
         <module>backend</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.13</version>
+                <configuration>
+                    <appName>job-search-frontend</appName>
+                    <includeTarget>false</includeTarget>
+                    <includes>
+                        <include>${project.basedir}/backend/target/backend-0.0.1-SNAPSHOT.jar</include>
+                    </includes>
+                    <processTypes>
+                        <web>java $JAVA_OPTS -jar backend/target/backend-0.0.1-SNAPSHOT.jar --server.port=$PORT
+                            $JAR_OPTS
+                        </web>
+                    </processTypes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
